Fix overlapping of columns on small screens. Fixes #837

--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -4,7 +4,7 @@
 
 .pricing {
   margin-top: 4em;
-  margin-bottom: 4em;
+  margin-bottom: 2em;
 
   .col-centered {
     min-width:320px;
@@ -14,7 +14,7 @@
     border-radius: 6px;
     list-style: none;
     padding: 0 0 20px;
-    margin: 0 0 15px;
+    margin: 0 0 45px;
     background: #f5f5f5;
     text-align: center;
     li {
